fix: align sidebar content left

--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,6 @@ a:focus {
   position: sticky;
   min-height: max-content;
   max-height: 20000px;
-  text-align: center;
 }
 
 .sidebar.is-open {
